# opuscodec-max-external

./: CLAUDE.md  CMakeLists.txt  README.md  little-scale.opuscodec.amxd  opus_codec_core.c  opus_codec_core.h  opuscodec~.c
